adding videos, teams, versions
