# src/controllers/all/team.controller.ts
@@ -1,20 +1,27 @@
 import Team from '../../models/team';
 import {SortOrder} from 'mongoose'
 import { NextFunction, Request, Response } from 'express';
+import {StatusCodes} from "../../types/statusCodes";
 
 export const getTeam = async (
   req: Request,
   res: Response,
   next: NextFunction
 ) => {
-  const  category = req.params.category;
-  const sort: SortOrder = (req.query.sort as unknown as SortOrder) || "asc"
+  const category = req.params.category;
+  let sort = req.query.sort as unknown as SortOrder;
+  const isSort = (value: any): value is SortOrder => {
+    return ['asc', 'desc', 'ascending', 'descending', 1 , -1].includes(value)
+  }
+  if (!isSort(sort)) {
+    sort = 'asc'
+  }
   try {
     const team = await Team.find({ status: 'active', category: category }).sort({
       order: sort,
     });
-    return res.status(200).json({
-      status: 200,
+    return res.status(StatusCodes.success).json({
+      status: StatusCodes.success,
       message: req.t('Success.retrieve'),
       data: team,
     });
